# Hands_of_God

./: .gitignore  README.md
Docs/: prd.md
agent-bridge/: .env.example  package.json
agent-bridge/src/: client.ts  config.ts  index.ts
agent-bridge/src/providers/: index.ts
agent-bridge/src/utils/: logger.ts
desktop/: index.html  package.json  tailwind.config.js
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs
desktop/src/components/: ActivityPanel.tsx  ChatArea.tsx  ConfirmModal.tsx  Sidebar.tsx
desktop/src/hooks/: useMcp.ts
desktop/src/store/: index.ts
desktop/src/styles/: globals.css
mcp-core/: Cargo.toml  build.rs
mcp-core/src/: audit.rs  config.rs  error.rs  lib.rs  main.rs  policy.rs  sandbox.rs  snapshot.rs
mcp-core/src/proto/: mod.rs
mcp-core/src/services/: command_service.rs  file_service.rs  git_service.rs  mod.rs  snapshot_service.rs  system_service.rs
mcp-core/tests/: command_service_test.rs  file_service_test.rs
protos/: command_service.proto  file_service.proto  git_service.proto  policy_service.proto  snapshot_service.proto  system_service.proto
templates/node-api/: package.json
templates/node-api/src/: index.js
templates/react-app/: package.json
templates/react-app/src/: App.tsx
